--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,24 @@
   min-width: 100%;
   min-height: 100%;
 }
+@media screen and (min-width: 1431px) {
+  .contents .main .container .box {
+    margin-left: 200px;
+    align-self: flex-end;
+  }
+}
+@media screen and (min-width: 801px) and (max-width: 1430px){
+  .contents .main .container .box {
+    margin-left: 0;
+    align-self: none;
+  }
+}
+@media screen and (max-width: 800px){
+  .contents .main .container .box {
+    margin-left: 0;
+    align-self: none;
+  }
+  .contents .main {
+    display: block;
+  }
+}
